--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="s20c1027tj@s.chibakoudai.jp">Masashi Okada</maintainer>
+  <maintainer email="bardmasa0704@gmail.com">Masashi-Okada</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
